--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>Hallo, world!</h1>
-    <script src="./Task1/Task1.js"></script>
+    <!-- <script src="./Task1/Task1.js"></script> -->
+    <script src="./Task2/Task2.js"></script>
 </body>
 
 </html>
