Add Task3 context this

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <h1>Hallo, world!</h1>
-    <!-- <script src="./Task1/Task1.js"></script> -->
+    <script src="./Task1/Task1.js"></script>
     <script src="./Task2/Task2.js"></script>
+    <script src="./Task3/Task3.js"></script>
 </body>
 
 </html>
